# structconf

./: README.md  pyproject.toml
.github/workflows/: package_test.yml
structconf/: __init__.py  conf.py
tests/: test_complex.py  test_simple.py
tests/yaml/complex/: complex.yaml  complex_error.yaml
tests/yaml/simple/: simple.yaml  simple_default.yaml  simple_error.yaml
