[tool.poetry]
authors = ["Wenqi Zhao <1027572886a@gmail.com>"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
description = "struct config using yaml"
license = "MIT"
name = "structconf"
readme = "README.md"
repository = "https://github.com/Green-Wood/structconf"
version = "0.3.0"

[tool.poetry.dependencies]
PyYAML = "5.3.1"
pydantic = "^1.8.1"
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.7.0"
pytest = "^5.2"
pytest-cov = "^2.11.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.isort]
atomic = true
filter_files = true
force_single_line = true
include_trailing_comma = true
known_first_party = "poetry"
lines_after_imports = 2
lines_between_types = 1
profile = "black"
skip_glob = ["*/setup.py"]
src_paths = ["poetry", "tests"]
use_parentheses = true

[tool.black]
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
include = '\.pyi?$'
line-length = 88
